@@ -1,4 +1,8 @@
-﻿Versão 1.0.1:
+﻿Versão 1.0.2:
+Corrigido erro em que a playlist desaparecia com actualizações
+Adicionada opção de ver a letra da música
+
+Versão 1.0.1:
 Corrigido bug em que em algumas músicas o download falhava
 Suporte a Gotham
 Possibilidade de reproduzir item seguinte automaticamente ou não
